--- a/assignment3/webt.html
+++ b/assignment3/webt.html
@@ -51,7 +51,7 @@
 </ul>
 </ul>
 </td>
-<td height="400.px" width="200.px"> <img src="D:\Web Sites\assignment 3\IMG_20210101_124512_475_2.jpg" ></td>
+<td height="400.px" width="200.px"> <img src="https://github.com/YashwantSingh1/HTML-codes/blob/main/assignment3/IMG_20210101_124512_475_2.jpg" ></td>
 </tr>
 <tr height="30">
 <td colspan="3"> <center> About Me</center> </td>
