--- a/conference/index.html
+++ b/conference/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
+html lang="en">
+   ead>
       <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -477,5 +477,5 @@
       <!-- javascript --> 
       <script src="js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-   </body>
-</html>
+   ody>
+tml>
